--- a/index.html
+++ b/index.html
@@ -12,13 +12,25 @@
     integrity="sha512-wC/cunGGDjXSl9OHUH0RuqSyW4YNLlsPwhcLxwWW1CR4OeC2E1xpcdZz2DeQkEmums41laI+eGMw95IJ15SS3g=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
+    input:-webkit-autofill {
+      -webkit-box-shadow: 0 0 0px 1000px #1f2937 inset; /* Cor equivalente a bg-gray-800 */
+      -webkit-text-fill-color: white;
+      transition: background-color 5000s ease-in-out 0s;
+    }
+  </style>
+  
+  
 </head>
 
 <body class="bg-gradient-to-b from-black via-gray-700 to-black min-h-screen flex flex-col items-center justify-start p-2 ">
   <main class="w-full flex flex-col items-center">
 
-    <form id="search-form" class="w-full max-w-md flex flex-col sm:flex-row sm:gap-4 gap-2">
+    <form id="search-form" class="w-full max-w-md flex flex-col sm:flex-row sm:gap-4 gap-2 justify-center items-center">
       <input type="text" id="riot-name" placeholder="Riot ID"
         class="p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
         required />
@@ -38,15 +50,19 @@
         <option value="jp1">JP</option>
       </select>
 
+      <input type="text" id="match-id" placeholder="Match ID (opcional)"
+        class="p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
+         />
+
       <button type="submit" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold">Buscar</button>
     </form>
     <br>
 
-    <section id="card-container" class="w-full flex justify-center mt-8"></section>
+    <section id="card-container" class="w-full flex justify-center mt-8 sm:mt-12"></section>
   </main>
 
 
-  <script src="js/app.js"></script>
+  <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
