--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
 
       <button type="submit" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold">Buscar</button>
     </form>
-    <br>
+    <!-- <br> --> 
+    <button id="btn-salvar-imagem" class="mt-2 p-2 rounded-md bg-blue-600 hover:bg-blue-800 text-white font-bold">Baixar</button>
 
     <section id="card-container" class="w-full flex justify-center mt-8 sm:mt-12"></section>
   </main>
 
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
   <script type="module" src="js/app.js"></script>
 </body>
