feat: new localization for save button

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
          />
 
       <button type="submit" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold">Buscar</button>
+      <button id="btn-salvar-imagem" type="button" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold">Baixar</button>
     </form>
     <!-- <br> --> 
-    <button id="btn-salvar-imagem" class="mt-2 p-2 rounded-md bg-blue-600 hover:bg-blue-800 text-white font-bold">Baixar</button>
 
     <section id="card-container" class="w-full flex justify-center mt-8 sm:mt-12"></section>
   </main>
