fix: new url to product url render

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  
+  <script>
+  // window.BACKEND_URL = 'http://localhost:3001';
+  // no render
+  window.BACKEND_URL = 'https://lolcardmatch.onrender.com/';
+  </script>
 
   <script type="module" src="js/app.js"></script>
 </body>
