fix: url with / - BACKEND_URL problem in prod

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <script>
   // window.BACKEND_URL = 'http://localhost:3001';
   // no render
-  window.BACKEND_URL = 'https://lolcardmatch.onrender.com/';
+  window.BACKEND_URL = 'https://lolcardmatch.onrender.com';
   </script>
 
   <script type="module" src="js/app.js"></script>
