--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
     <form id="search-form" class="w-full max-w-md flex flex-col sm:flex-row sm:gap-4 gap-2 justify-center items-center">
       <input type="text" id="riot-name" placeholder="Riot ID"
-        class="p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
+        class="w-[248px] sm:w-full p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
         required />
 
       <input type="text" id="riot-tag" placeholder="Tagline"
-        class="p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
+        class="w-[248px] sm:w-full p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
         required />
 
       <select id="riot-server"
-        class="p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
+        class="w-[248px] sm:w-full p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
         required>
         <option value="br1">BR</option>
         <option value="na1">NA</option>
@@ -50,13 +50,15 @@
       </select>
 
       <input type="text" id="match-id" placeholder="Match ID (opcional)"
-        class="p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
+        class="w-[248px] sm:w-full p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"
          />
 
-      <button type="submit" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold">Buscar</button>
-      <button id="btn-salvar-imagem" type="button" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold">Baixar</button>
+      <div class="flex gap-2 justify-center w-full">
+        <button type="submit" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold flex-1 max-w-[120px]">Buscar</button>
+        <button id="btn-salvar-imagem" type="button" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold flex-1 max-w-[120px]">Baixar</button>
+      </div>
+    
     </form>
-    <!-- <br> --> 
 
     <section id="card-container" class="w-full flex justify-center mt-8 sm:mt-12"></section>
   </main>
